--- a/build.gradle
+++ b/build.gradle
@@ -14,24 +14,27 @@ idea {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 compileJava {
-    options.incremental = false
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
 }
 
 dependencies {
-    compile 'org.deephacks.lmdbjni:lmdbjni-linux64:0.4.4'
+    compile 'org.deephacks.lmdbjni:lmdbjni-linux64:0.4.4.1'
     compile 'org.fusesource.leveldbjni:leveldbjni-linux64:1.8'
     compile 'org.apache.bookkeeper:bookkeeper-server:4.3.1'
+    compile 'org.apache.curator:curator-framework:2.9.1'
+    compile 'org.apache.curator:curator-recipes:2.9.1'
 }
 
 jar {
 
     manifest.attributes (
+        'Main-Class': 'rlmdb.Env',
         'Class-Path': configurations.runtime.files.collect { 'lib/'+it.name }.join(' ')
     )
 
