--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'org.apache.bookkeeper:bookkeeper-server:4.3.1'
     compile 'org.apache.curator:curator-framework:2.9.1'
     compile 'org.apache.curator:curator-recipes:2.9.1'
+    compile 'com.google.guava:guava:19.0-rc2'
 }
 
 jar {
